<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.contact_list.activity.ContactListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#EFECEC"
            android:orientation="vertical">

            <SearchView
                android:id="@+id/activityContactList_SV_searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/bg_white_rounded"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/search_contact"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activityContactList_BTN_allFilter"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/filter_show_all"
                    android:textSize="10sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activityContactList_BTN_ascAgeFilter"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif"
                    android:text="@string/filter_age"
                    android:textSize="10sp"
                    app:icon="@drawable/ic_arrow_upward" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activityContactList_BTN_descAgeFilter"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:fontFamily="sans-serif"
                    android:text="@string/filter_age"
                    android:textSize="10sp"
                    app:icon="@drawable/ic_arrow_downward" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/activityContactList_BTN_nameFilter"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:text="@string/name"
                    android:textSize="10sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/activityContactList_RV_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

            <ProgressBar
                android:id="@+id/activityContactList_PB_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="100dp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>